--- a/main.html
+++ b/main.html
@@ -6,7 +6,51 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body> 
+	<table>
+		<thead>
+			<tr>
+				<th>Student Name</th> 
+				<th>Mobile</th>
+			</tr>
+		</thead> 
+
+		<tbody>
+			<tr>
+				<td>Prasanna Kumar Reddy</td>
+				<td>98765433210</td>
+			</tr> 
+			<tr>
+				<td>Sai Kumar </td>
+				<td>7894561230</td>
+			</tr> 
+			<tr>
+				<td>Rahul</td>
+				<td>6547893210</td>
+			</tr>
+		</tbody>  
+	</table> 
+
+	List of medias
+	<ol>
+    <li>
+      <img src="https://picsum.photos/id/123/200/300" alt="Image description">
+    </li>
+    <li>
+      <video width="320" height="240" controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">   
+
+      </video>
+    </li>
+    <li>
+      <audio controls>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">   
+
+      </audio>
+    </li>
+  </ol>
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
